fix text wrapping in mentor detail card

--- a/client/src/css/mentor_profile.scss
+++ b/client/src/css/mentor_profile.scss
@@ -13,8 +13,6 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
 }
 
 .video-player {
