--- a/client/src/css/search_results.scss
+++ b/client/src/css/search_results.scss
@@ -21,8 +21,6 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
 }
 
 .mentor-result-container:hover {
